# SEDManager

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  sonar-project.properties  sudo_gdb.sh
.github/workflows/: build_and_test.yml  clang_format.yml  deploy.yml  release.yml  sonarqube.yml
src/: CMakeLists.txt
src/EncryptedDevice/: CMakeLists.txt  EncryptedDevice.cpp  EncryptedDevice.hpp  ValueToJSON.cpp  ValueToJSON.hpp
src/SEDManager/: App.cpp  App.hpp  CMakeLists.txt  Object.hpp  SEDManager.cpp  SEDManager.hpp  Table.cpp  Table.hpp  admin.manifest  main.cpp
src/SEDManagerCAPI/: CMakeLists.txt  SEDManagerCAPI.cpp  SEDManagerCAPI_2.cpp
src/SEDManagerCLI/: CMakeLists.txt  Interactive.cpp  Interactive.hpp  PBA.cpp  PBA.hpp  Utility.cpp  Utility.hpp  main.cpp
src/SEDManagerGUI/: pubspec.yaml
src/SEDManagerGUI/lib/bindings/: encrypted_device.dart  future.dart  sedmanager_capi.dart  (+2 more)
src/SEDManagerGUI/linux/: CMakeLists.txt
src/SEDManagerGUI/test/: utility.dart  widget_test.dart
src/SEDManagerGUI/windows/: CMakeLists.txt
src/SEDMgr/: App.hpp  CMakeLists.txt  main.cpp
src/TPerLib/: CMakeLists.txt  Exception.hpp  Logging.cpp  Logging.hpp  Method.cpp  Method.hpp  MethodTypes.cpp  MethodTypes.hpp  NvmeDevice.cpp  NvmeDevice.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  TrustedPeripheral.cpp  TrustedPeripheral.hpp
src/TPerLib/Communication/: Discovery.cpp  Packet.hpp  Token.cpp  Token.hpp  TokenStream.cpp  TokenStream.hpp  Value.cpp  Value.hpp
src/TPerLib/Core/: Authorities.hpp  Methods.hpp  Names.cpp  Names.hpp  SecurityProviders.hpp  Tables.hpp  Uids.hpp
src/TPerLib/Rpc/: Method.cpp  Method.hpp  MethodArgs.cpp  MethodArgs.hpp  TypeMapping.cpp  TypeMapping.hpp  Types.hpp
src/TPerLib/Serialization/: FlatBinaryArchive.hpp  RpcArchive.cpp  RpcArchive.hpp  RpcDebugArchive.cpp  RpcDebugArchive.hpp  RpcStream.cpp  RpcStream.hpp  TokenArchive.cpp  TokenArchive.hpp  TokenDebugArchive.cpp  TokenDebugArchive.hpp  TokenStreamArchive.cpp  TokenStreamArchive.hpp  Utility.hpp
src/TPerLib/Structures/: CommLayer.hpp  Discovery.cpp  Discovery.hpp  Rpc.cpp  Rpc.hpp  TokenStream.hpp
src/lib/: CMakeLists.txt
src/lib/Archive/: CMakeLists.txt  Conversion.hpp  FlatBinaryArchive.cpp  FlatBinaryArchive.hpp  Serialization.hpp  Token.cpp  Token.hpp  TokenArchive.cpp  TokenArchive.hpp  TokenBinaryArchive.cpp  TokenBinaryArchive.hpp  TokenDebugArchive.cpp  TokenDebugArchive.hpp  TokenTextArchive.cpp  TokenTextArchive.hpp
src/lib/Archive/Types/: Exception.hpp  ValueToJSON.cpp  ValueToJSON.hpp  ValueToNative.hpp  ValueToToken.cpp  ValueToToken.hpp
src/lib/Data/: CMakeLists.txt  Method.cpp  Method.hpp  NativeTypes.cpp  NativeTypes.hpp  SetupPackets.hpp  TokenStream.cpp  TokenStream.hpp  Type.hpp  Value.cpp  Value.hpp
src/lib/Error/: CMakeLists.txt  Exception.hpp
src/lib/Messaging/: CMakeLists.txt  ComPacket.hpp  Method.cpp  Method.hpp  Native.hpp  NativeTypes.hpp  SetupPackets.hpp  Token.cpp  Token.hpp  TokenStream.cpp  TokenStream.hpp  Type.hpp  UID.cpp  UID.hpp  Value.cpp  Value.hpp
src/lib/MockDevice/: CMakeLists.txt  MockDevice.cpp  MockDevice.hpp  MockPreconfig.cpp  MockPreconfig.hpp  MockSecurityProvider.cpp  MockSecurityProvider.hpp  MockSession.cpp  MockSession.hpp  MockSetupLayer.cpp  MockSetupLayer.hpp  Preconfig.cpp  Preconfig.hpp  State.cpp  State.hpp
src/lib/RPC/: CMakeLists.txt  Exception.hpp  Method.cpp  Method.hpp  Value.cpp  Value.hpp  ValueCast.hpp
src/lib/Specification/: CMakeLists.txt  ColumnTypes.cpp  ColumnTypes.hpp  Enumerations.hpp  Identifiers.hpp  Module.cpp  Module.hpp  Names.cpp  Names.hpp  NativeTypes.hpp  Tables.cpp  Tables.hpp  Type.hpp  Types.hpp
src/lib/Specification/Common/: TableDesc.hpp  Utility.cpp  Utility.hpp
src/lib/Specification/Core/: CoreModule.cpp  CoreModule.hpp
src/lib/Specification/Core/Defs/: TableDescs.hpp  TypeDefs.hpp  Types.hpp  UIDs.hpp
src/lib/Specification/Opal/: OpalModule.cpp  OpalModule.hpp
src/lib/Specification/PSID/: PSIDModule.cpp  PSIDModule.hpp
src/lib/Specification_2/: CMakeLists.txt  Module.cpp  Module.hpp  Utility.hpp
src/lib/Specification_2/Core/: CoreModule.cpp  CoreModule.hpp
src/lib/Specification_2/Core/Data/: TableDescs.hpp
src/lib/Specification_2/Core/Defs/: Types.hpp
src/lib/Specification_2/Opal/: OpalModule.cpp  OpalModule.hpp
src/lib/Specification_2/PSID/: PSIDModule.cpp  PSIDModule.hpp
src/lib/StorageDevice/: CMakeLists.txt  Exception.hpp  NvmeDevice.cpp  NvmeDevice.hpp  StorageDevice.hpp
src/lib/StorageDevice/Common/: NvmeStructures.hpp  StorageDevice.hpp
src/lib/StorageDevice/Linux/: EnumerateStorageDevices.cpp  NvmeDevice.cpp  NvmeDevice.hpp
src/lib/StorageDevice/Windows/: EnumerateStorageDevices.cpp  NvmeDevice.cpp  NvmeDevice.hpp
src/lib/TrustedPeripheral/: CMakeLists.txt  Discovery.cpp  Discovery.hpp  Exception.hpp  Logging.cpp  Logging.hpp  Method.cpp  Method.hpp  MethodUtils.cpp  MethodUtils.hpp  ModuleCollection.cpp  ModuleCollection.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  TPerModules.cpp  TPerModules.hpp  TrustedPeripheral.cpp  TrustedPeripheral.hpp
src/lib/UI/: CMakeLists.txt  ValueToJSON.cpp  ValueToJSON.hpp
test/: CMakeLists.txt  TestMethod.cpp  TestPackets.cpp  TestRpcStream.cpp  TestTokenArchive.cpp  TestTokenStream.cpp  TestTokenStreamArchive.cpp  TestValue.cpp  main.cpp
test/Archive/: TestPacket.cpp  TestTokenArchive.cpp  TestValueToJSON.cpp  TestValueToNative.cpp  TestValueToToken.cpp
test/Data/: TestComPacket.cpp  TestNativeTypes.cpp  TestSetupPackets.cpp  TestTokenStream.cpp  TestType.cpp  TestValue.cpp
test/Messaging/: TestComPacket.cpp  TestMethod.cpp  TestNativeTypes.cpp  TestSetupPackets.cpp  TestTokenStream.cpp  TestType.cpp  TestUID.cpp  TestValue.cpp
test/Mock/: TestSession.cpp  TestSessionManager.cpp  TestTrustedPeripheral.cpp
test/RPC/: TestMethod.cpp  TestValue.cpp  TestValueCast.cpp
test/Specification/: TestModule.cpp  TestType.cpp  TestUtility.cpp
test/TrustedPeripheral/: TestDiscovery.cpp  TestMethod.cpp
test/UI/: TestValueToJSON.cpp
(+20 files in other folders)
